<resources>
    <string name="app_name">Emergency Escape</string>

    <string name="google_maps_key">XX</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email not valid</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>

    <string name="action_emergency">Emergency</string>
    <string name="action_no_emergency">No Emergency</string>
    <string name="action_logout">Logout</string>
    <string name="action_text">Text</string>
    <string name="action_qr_code">QRCode</string>
    <string name="action_tap">Tap</string>

    <string name="mappa">Map</string>
    <string name="action_log_in">Login</string>
    <string name="action_remember_me">Remember Me</string>
    <string name="welcome_message">Welcome back</string>
    <string name="error_message">Error</string>
    <string name="wrong_user_pass">Wrong username or password!</string>
    <string name="departure_room">Departure Room</string>
    <string name="quote">Quote</string>
    <string name="insert_destination">Insert Destination:</string>
    <string name="action_ok">Ok</string>
    <string name="insert_departure">Insert Departure:</string>
    <string name="title_activity_noem_tap">NoemTapActivity</string>
    <string name="itinerary">Itinerary</string>


</resources>

